# deep-learning-jax

./: README.md  pyproject.toml  requirments.txt
scripts/: 01_linear_rigression.py  01_linear_rigression_template.py
