[tool.poetry]
name = "jax-deep-learning"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elegy = "^0.2.2"
jax = "^0.1.75"
jaxlib = "^0.1.52"
numpy = "^1.19.1"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
